# a2pc

./: Makefile  README.md  pypi.md  pyproject.toml  requirements.txt
src/a2pc/: __init__.py  a2pc.py
