[project]
name = "a2pc"
version = "1.0"
description = "A OS indipendent way to display Android phone notifications on PC via the terminal"
readme = "pypi.md"
requires-python = ">=3.8, <3.11"
license = { file = "COPYING" }
authors = [
    { name = "FilippoD21", email = "filippod@dib21.it" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Operating System :: OS Indipendent",
    "Topic :: Desktop Environment",
    "Topic :: Utilities"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/FilippoD21/a2pc"
Issues = "https://github.com/FilippoD21/a2pc/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
a2pc = "a2pc:main"
